--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bengkelgis_client">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-feature android:name="android.hardware.camera.flash" />
-
 
     <application
         android:allowBackup="true"
@@ -18,7 +23,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_bengkel_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".ListNearbyActivity"></activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -29,20 +36,15 @@
         <activity
             android:name=".MapsActivity"
             android:label="Service Location" />
-
         <activity
             android:name=".DetailBengkel"
-            android:label="Detail Service" >
-        </activity>
-
+            android:label="Detail Service"></activity>
         <activity
             android:name=".ListBengkel"
-            android:label="List Service" >
-        </activity>
+            android:label="List Service"></activity>
         <activity
             android:name=".FormBengkel"
-            android:label="Add Service" >
-        </activity>
+            android:label="Add Service"></activity>
         <activity
             android:name=".Dashboard"
             android:label="@string/app_name"
@@ -53,6 +55,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
+
 </manifest>
